syntax = "proto3";

option java_package = "dev.datlag.burningseries.datastore.preferences";
option java_multiple_files = true;

message UserSettings {
  message BurningSeries {
    string username = 1;
    string password = 2;
    string loginCookieName = 3;
    string loginCookieValue = 4;
    int64 loginCookieExpiration = 5;
    int64 loginCookieMaxAge = 6;
    string uidCookieName = 7;
    string uidCookieValue = 8;
    int64 uidCookieExpiration = 9;
    int64 uidCookieMaxAge = 10;
    bool showedLogin = 11;
  }
  BurningSeries burningSeries = 1;
}